name:                repline
version:             0.2.0.0
synopsis:            Haskeline wrapper for GHCi-like REPL interfaces.
license:             MIT
license-file:        LICENSE
author:              Stephen Diehl
maintainer:          stephen.m.diehl@gmail.com
copyright:           2014-2017 Stephen Diehl
category:            User Interfaces
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 7.6.1, GHC == 7.6.3, GHC == 7.8.3, GHC == 7.10.1
homepage:            https://github.com/sdiehl/repline
Bug-Reports:         https://github.com/sdiehl/repline/issues

Description:
  Haskeline wrapper for GHCi-like REPL interfaces. Composable with normal mtl transformers.

Source-Repository head
    Type: git
    Location: git@github.com:sdiehl/repline.git

library
  hs-source-dirs:      src
  exposed-modules:     System.Console.Repline
  build-depends:
    base       >= 4.6 && <5.0,
    containers >= 0.5 && <0.7,
    mtl        >= 2.2 && <2.3,
    process    >= 1.2 && <2.0,
    haskeline  >= 0.7 && <0.8
  default-language:    Haskell2010
